# tz-gradient-tech

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
database/: crud.py  db.py
database/models/: short_url.py
services/: generate_short_url.py  shortener.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_api.py  test_crud.py
utils/: config.py
