[project]
name = "tz-gradient-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic[asyncio]>=1.18.4",
    "asyncpg>=0.31.0",
    "environs>=14.6.0",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
